@@ -26,49 +26,50 @@ import (
 
 var (
 	filterIndexesPrefixMap = utils.StringSet{
-		utils.AttributeFilterIndexes:      struct{}{},
-		utils.ResourceFilterIndexes:       struct{}{},
-		utils.StatFilterIndexes:           struct{}{},
-		utils.ThresholdFilterIndexes:      struct{}{},
-		utils.RouteFilterIndexes:          struct{}{},
-		utils.ChargerFilterIndexes:        struct{}{},
-		utils.DispatcherFilterIndexes:     struct{}{},
-		utils.RateProfilesFilterIndexPrfx: struct{}{},
-		utils.RateFilterIndexPrfx:         struct{}{},
+		utils.AttributeFilterIndexes:      {},
+		utils.ResourceFilterIndexes:       {},
+		utils.StatFilterIndexes:           {},
+		utils.ThresholdFilterIndexes:      {},
+		utils.RouteFilterIndexes:          {},
+		utils.ChargerFilterIndexes:        {},
+		utils.DispatcherFilterIndexes:     {},
+		utils.RateProfilesFilterIndexPrfx: {},
+		utils.RateFilterIndexPrfx:         {},
 	}
 	cachePrefixMap = utils.StringSet{
-		utils.DESTINATION_PREFIX:          struct{}{},
-		utils.REVERSE_DESTINATION_PREFIX:  struct{}{},
-		utils.RATING_PLAN_PREFIX:          struct{}{},
-		utils.RATING_PROFILE_PREFIX:       struct{}{},
-		utils.ACTION_PREFIX:               struct{}{},
-		utils.ACTION_PLAN_PREFIX:          struct{}{},
-		utils.AccountActionPlansPrefix:    struct{}{},
-		utils.ACTION_TRIGGER_PREFIX:       struct{}{},
-		utils.SHARED_GROUP_PREFIX:         struct{}{},
-		utils.ResourceProfilesPrefix:      struct{}{},
-		utils.TimingsPrefix:               struct{}{},
-		utils.ResourcesPrefix:             struct{}{},
-		utils.StatQueuePrefix:             struct{}{},
-		utils.StatQueueProfilePrefix:      struct{}{},
-		utils.ThresholdPrefix:             struct{}{},
-		utils.ThresholdProfilePrefix:      struct{}{},
-		utils.FilterPrefix:                struct{}{},
-		utils.RouteProfilePrefix:          struct{}{},
-		utils.AttributeProfilePrefix:      struct{}{},
-		utils.ChargerProfilePrefix:        struct{}{},
-		utils.DispatcherProfilePrefix:     struct{}{},
-		utils.DispatcherHostPrefix:        struct{}{},
-		utils.RateProfilePrefix:           struct{}{},
-		utils.AttributeFilterIndexes:      struct{}{},
-		utils.ResourceFilterIndexes:       struct{}{},
-		utils.StatFilterIndexes:           struct{}{},
-		utils.ThresholdFilterIndexes:      struct{}{},
-		utils.RouteFilterIndexes:          struct{}{},
-		utils.ChargerFilterIndexes:        struct{}{},
-		utils.DispatcherFilterIndexes:     struct{}{},
-		utils.RateProfilesFilterIndexPrfx: struct{}{},
-		utils.RateFilterIndexPrfx:         struct{}{},
+		utils.DESTINATION_PREFIX:          {},
+		utils.REVERSE_DESTINATION_PREFIX:  {},
+		utils.RATING_PLAN_PREFIX:          {},
+		utils.RATING_PROFILE_PREFIX:       {},
+		utils.ACTION_PREFIX:               {},
+		utils.ACTION_PLAN_PREFIX:          {},
+		utils.AccountActionPlansPrefix:    {},
+		utils.ACTION_TRIGGER_PREFIX:       {},
+		utils.SHARED_GROUP_PREFIX:         {},
+		utils.ResourceProfilesPrefix:      {},
+		utils.TimingsPrefix:               {},
+		utils.ResourcesPrefix:             {},
+		utils.StatQueuePrefix:             {},
+		utils.StatQueueProfilePrefix:      {},
+		utils.ThresholdPrefix:             {},
+		utils.ThresholdProfilePrefix:      {},
+		utils.FilterPrefix:                {},
+		utils.RouteProfilePrefix:          {},
+		utils.AttributeProfilePrefix:      {},
+		utils.ChargerProfilePrefix:        {},
+		utils.DispatcherProfilePrefix:     {},
+		utils.DispatcherHostPrefix:        {},
+		utils.RateProfilePrefix:           {},
+		utils.AttributeFilterIndexes:      {},
+		utils.ResourceFilterIndexes:       {},
+		utils.StatFilterIndexes:           {},
+		utils.ThresholdFilterIndexes:      {},
+		utils.RouteFilterIndexes:          {},
+		utils.ChargerFilterIndexes:        {},
+		utils.DispatcherFilterIndexes:     {},
+		utils.RateProfilesFilterIndexPrfx: {},
+		utils.RateFilterIndexPrfx:         {},
+		utils.FilterIndexPrfx:             {},
 	}
 )
 
@@ -273,6 +274,9 @@ func (dm *DataManager) CacheDataFromDB(prfx string, ids []string, mustBeCached b
 				return
 			}
 			_, err = dm.GetIndexes(utils.CacheRateFilterIndexes, tntCtx, idxKey, false, true)
+		case utils.FilterIndexPrfx:
+			tntID := utils.NewTenantID(dataID)
+			_, err = dm.GetIndexes(utils.CacheReverseFilterIndexes, tntID.Tenant, tntID.ID, false, true)
 		case utils.LoadIDPrefix:
 			_, err = dm.GetItemLoadIDs(utils.EmptyString, true)
 		}
