@@ -1296,28 +1296,39 @@ type ArgsGetCacheItemWithOpts struct {
 func NewAttrReloadCacheWithOpts() *AttrReloadCacheWithOpts {
 	return &AttrReloadCacheWithOpts{
 		ArgsCache: map[string][]string{
-			DestinationIDs:        nil,
-			ReverseDestinationIDs: nil,
-			RatingPlanIDs:         nil,
-			RatingProfileIDs:      nil,
-			ActionIDs:             nil,
-			ActionPlanIDs:         nil,
-			AccountActionPlanIDs:  nil,
-			ActionTriggerIDs:      nil,
-			SharedGroupIDs:        nil,
-			ResourceProfileIDs:    nil,
-			ResourceIDs:           nil,
-			StatsQueueIDs:         nil,
-			StatsQueueProfileIDs:  nil,
-			ThresholdIDs:          nil,
-			ThresholdProfileIDs:   nil,
-			FilterIDs:             nil,
-			RouteProfileIDs:       nil,
-			AttributeProfileIDs:   nil,
-			ChargerProfileIDs:     nil,
-			DispatcherProfileIDs:  nil,
-			DispatcherHostIDs:     nil,
-			RateProfileIDs:        nil,
+			DestinationIDs:             nil,
+			ReverseDestinationIDs:      nil,
+			RatingPlanIDs:              nil,
+			RatingProfileIDs:           nil,
+			ActionIDs:                  nil,
+			ActionPlanIDs:              nil,
+			AccountActionPlanIDs:       nil,
+			ActionTriggerIDs:           nil,
+			SharedGroupIDs:             nil,
+			ResourceProfileIDs:         nil,
+			ResourceIDs:                nil,
+			StatsQueueIDs:              nil,
+			StatsQueueProfileIDs:       nil,
+			ThresholdIDs:               nil,
+			ThresholdProfileIDs:        nil,
+			FilterIDs:                  nil,
+			RouteProfileIDs:            nil,
+			AttributeProfileIDs:        nil,
+			ChargerProfileIDs:          nil,
+			DispatcherProfileIDs:       nil,
+			DispatcherHostIDs:          nil,
+			RateProfileIDs:             nil,
+			TimingIDs:                  nil,
+			AttributeFilterIndexIDs:    nil,
+			ResourceFilterIndexIDs:     nil,
+			StatFilterIndexIDs:         nil,
+			ThresholdFilterIndexIDs:    nil,
+			RouteFilterIndexIDs:        nil,
+			ChargerFilterIndexIDs:      nil,
+			DispatcherFilterIndexIDs:   nil,
+			RateProfilesFilterIndexIDs: nil,
+			RateFilterIndexIDs:         nil,
+			FilterIndexIDs:             nil,
 		},
 	}
 }
